--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Résumé</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <main>
       <div class="resume">
         <div class="container">
           <div class="resume__block">
-            <h1 class="contact-info__header">John Smith</h1>
+            <h1 class="contact-info__header">Khoroshev Vyacheslav</h1>
             <h3 class="contact-info__sub-header">Full-Stack Developer</h3>
 
             <div class="contact_info_container fh">
@@ -31,7 +31,7 @@
                       ></path>
                     </svg>
                   </div>
-                  <span>Lviv, Ukraine</span>
+                  <span>Mykolaiv, Ukraine</span>
                 </a>
                 <a
                   href="https://ua.linkedin.com/company/binary-studio_241166"
@@ -62,7 +62,7 @@
               <div class="contact-info__block contact-info__block--center">
                 <img
                   class="contact-info__avatar"
-                  src="assets/avatar.png"
+                  src="assets/avatar.jpg"
                   alt="Avatar"
                 />
               </div>
@@ -92,76 +92,35 @@
                 </svg>
               </div>
               <p class="intro_text">
-                I'm John, a software developer driven by innovation and
-                problem-solving. With a strong background in computer science,
-                I'm dedicated to pushing boundaries and crafting elegant
-                solutions through code.
+                I'm Slava, I've been working in a product IT company as a Data
+                Specialist for the past three years. I've been studying
+                programming for almost two years. In addition, I've been
+                studying English at an online school for the past six months. At
+                the moment my level is A2, but by the end of the year I'm going
+                to be B1. I'm here because I want to check my programming level
+                and gain experience working in a team close to real projects.
               </p>
             </div>
           </div>
         </div>
-        <div class="container">
-          <div class="resume__block">
-            <div class="skills">
-              <h3 class="skills__header">Skills</h3>
-              <p class="skills__text">
-                Problem solving, Continuous Learning, Team Collaboration
-              </p>
-            </div>
-          </div>
-        </div>
+
         <div class="container">
           <div class="resume__block">
             <div class="main-info fh">
               <div class="experiences">
                 <h3 class="experiences__header">Experience</h3>
-                <div class="experiences__company">
-                  <div class="experiences__company-header">
-                    <span class="experiences__company-header-durability"
-                      >2005-Present</span
-                    >
-                    <h3 class="experiences__company-header-name">
-                      Binary Studio
-                    </h3>
-                  </div>
-
-                  <div class="experiences__company-project">
-                    <span class="experiences__company-project-role"
-                      >Full-Stack Developer</span
-                    >
-                    <h3 class="experiences__company-project-name">
-                      Hooman project
-                    </h3>
-                    <ul class="experiences__company-project-responsibilities">
-                      <li>Backend Architecture</li>
-                      <li>Frontend Development</li>
-                      <li>API Integration</li>
-                      <li>Code Maintenance</li>
-                    </ul>
-                  </div>
-                </div>
+                <div class="experiences__container"></div>
               </div>
-
+              <div class="education">
+                <h3 class="education-header">Education</h3>
+                <div class="educations__container"></div>
+              </div>
+              <div class="skills">
+                <h3 class="skills-header">Skills</h3>
+                <div class="skills__container"></div>
+              </div>
               <div class="additional-info fv">
                 <div class="additional-info fv">
-                  <div class="additional-info__education">
-                    <h3 class="additional-info__education-header">Education</h3>
-                    <div class="additional-info__education-university">
-                      <span
-                        class="additional-info__education-university-durability"
-                        >2021</span
-                      >
-                      <h3
-                        class="additional-info__education-university-speciality"
-                      >
-                        Full-Stack Development
-                      </h3>
-                      <p class="additional-info__education-university-name">
-                        Binary Studio Academy
-                      </p>
-                    </div>
-                  </div>
-
                   <div class="additional-info__languages">
                     <h3 class="additional-info__languages-header">Languages</h3>
                     <p class="additional-info__languages-item">English</p>
@@ -174,5 +133,6 @@
         </div>
       </div>
     </main>
+    <script src="js/dataLoader.js"></script>
   </body>
 </html>
