Edit block with contact info#23 (Add slider)

--- a/index.html
+++ b/index.html
@@ -6,31 +6,27 @@
     <title>Résumé</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-/>
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
   </head>
   <body>
     <main>
       <div class="resume">
-        <div class="container">
+        <section class="container">
           <div class="resume__block">
             <h1 class="contact-info__header">Khoroshev Vyacheslav</h1>
             <h3 class="contact-info__sub-header">Full-Stack Developer</h3>
             <div class="contact_info_container fh">
-              <div class="contact-info__block">
-              <div class="contact-info__block contact-info__block--center">
-                <img
-                  class="contact-info__avatar"
-                  src="assets/avatar.jpg"
-                  alt="Avatar"
-                />
-              </div>
+              <div class="contact-info__block"></div>
+              <div
+                class="contact-info__block contact-info__block--center"
+              ></div>
               <div class="contact-info__block"></div>
             </div>
           </div>
-        </div>
-        <div class="container">
+        </section>
+        <section class="container">
           <div class="resume__block">
             <div class="intro">
               <div class="intro__icon-wrapper">
@@ -61,9 +57,8 @@
               </p>
             </div>
           </div>
-        </div>
-
-        <div class="container">
+        </section>
+        <section class="container">
           <div class="resume__block">
             <div class="tabs">
               <div class="tabs__header">
@@ -141,10 +136,11 @@
               </div>
             </div>
           </div>
-        </div>
+        </section>
       </div>
     </main>
     <script src="js/dataLoader.js" defer></script>
     <script src="js/main.js" defer></script>
+    <script src="js/slider.js" defer></script>
   </body>
 </html>
