Fix css styles #26.4 #26.5

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -20,11 +20,7 @@
             <div class="contact-info__container fe">
               <div class="contact-info__block avatar"></div>
               <div class="contact-info__block fv">
-                <div class="contact-info__block main">
-                  <p>number: +38(099)770-17-89</p>
-                  <p>email: khoroshevvyacheslav@gmail.com</p>
-                  <p>city: Mykolaiv</p>
-                </div>
+                <div class="contact-info__block main"></div>
                 <div class="contact-info__block socials"></div>
               </div>
             </div>
@@ -43,7 +39,6 @@
                 to be B1. I'm here because I want to check my programming level
                 and gain experience working in a team close to real projects.
               </p>
-              
             </div>
           </div>
         </section>
@@ -127,7 +122,6 @@
           </div>
         </section>
       </div>
-      
     </main>
     <script src="js/dataLoader.js" defer></script>
     <script src="js/main.js" defer></script>
