--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
           <div class="resume__block">
             <h1 class="contact-info__header">Khoroshev Vyacheslav</h1>
             <h3 class="contact-info__sub-header">Full-Stack Developer</h3>
+          </div>
+        </section>
+        <section class="container">
+          <div class="resume__block">
             <div class="contact-info__container fe">
               <div class="contact-info__block avatar"></div>
               <div class="contact-info__block fv">
@@ -31,13 +35,12 @@
             <div class="intro">
               <div class="intro__wrapper"></div>
               <p class="intro__text">
-                I'm Slava, I've been working in a product IT company as a Data
-                Specialist for the past three years. I've been studying
-                programming for almost two years. In addition, I've been
-                studying English at an online school for the past six months. At
-                the moment my level is A2, but by the end of the year I'm going
-                to be B1. I'm here because I want to check my programming level
-                and gain experience working in a team close to real projects.
+                I am Slava, I have been working in a product IT company as a
+                data specialist for the last four years. I am studying
+                programming more. In addition, I have been studying English for
+                the last year. I am here because I want to test my programming
+                level and get experience working in a team, close to real
+                projects.
               </p>
             </div>
           </div>
