--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Résumé</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css">
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-    />
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   </head>
   <body>
     <main>
       <div class="resume">
-        <section class="container">
+        <div class="container">
           <div class="resume__block">
             <h1 class="contact-info__header">Khoroshev Vyacheslav</h1>
             <h3 class="contact-info__sub-header">Full-Stack Developer</h3>
           </div>
-        </section>
-        <section class="container">
+        </div>
+        <div class="container">
           <div class="resume__block">
             <div class="contact-info__container fe">
               <div class="contact-info__block avatar"></div>
@@ -29,8 +28,8 @@
               </div>
             </div>
           </div>
-        </section>
-        <section class="container">
+        </div>
+        <div class="container">
           <div class="resume__block">
             <div class="intro">
               <div class="intro__wrapper"></div>
@@ -44,8 +43,8 @@
               </p>
             </div>
           </div>
-        </section>
-        <section class="container">
+        </div>
+        <div class="container">
           <div class="resume__block">
             <div class="tabs">
               <div class="tabs__header fe">
@@ -123,7 +122,7 @@
               </div>
             </div>
           </div>
-        </section>
+        </div>
       </div>
     </main>
     <script src="js/dataLoader.js" defer></script>
